@@ -1,6 +1,5 @@
 Bugs to fix:
 
-- :<range><command> can't have a space before the command.
 - can't delete empty lines at end of file.
 - Show message after shifting lines with :< or :>
 - Replace mode - fix cursor. Can't figure out how to keep block cursor.
@@ -8,6 +7,7 @@ Bugs to fix:
 Requested Functionality to add:
 
 - Compose support for i18n
+- Highlight all searches (:set hls, :set nohls, :nohls)
 - More fold region support
 - Window support (need access to splitter)
 - Text objects (visual and operator modes)
